Updating the color of the bottom border of the h2 and adding the initial style for unordered list items.

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,11 @@
 #sidebar-first h2 {
   font-weight:100;
   color: #980000;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #ddd;
+}
+
+#sidebar-first ul li {
+  list-item-style: none;
+  font-weight:200;
+  color: #ddd;
 }
