Moving the line item style to the proper place and changing the color of the sidebar list items.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@
   border-bottom: 1px solid #ddd;
 }
 
-#sidebar-first ul li {
+#sidebar-first ul {
   list-item-style: none;
+}
+
+#sidebar-first ul li {
   font-weight:200;
-  color: #ddd;
+  color: #555;
 }
