--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 body {
   font-family: "Proxima Nova Regular","Helvetica Neue",Arial,Helvetica,sans-serif;
+  color: #980000;
+}
+
+#main-content h1 {
+  font-weight:100;
+  border-bottom: 1px solid #ddd;
 }
 
 #sidebar-first h2 {
   font-weight:100;
-  color: #980000;
   border-bottom: 1px solid #ddd;
 }
 
