--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 #sidebar-first h2 {
+  text-transform:uppercase;
   font-weight:100;
   color: #980000;
   border-bottom: 1px solid #ddd;
