--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 
 #sidebar-first h2 {
   text-transform:uppercase;
+  font-size: .8em;
   font-weight:100;
   color: #980000;
   border-bottom: 1px solid #ddd;
