--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #main-content .col-1 {
-  padding:10px;
+  padding:1em;
 }
 
 #main-content h1 {
@@ -14,7 +14,7 @@ body {
 
 #sidebar-first h2 {
   text-transform:uppercase;
-  font-size: .8em;
+  font-size: 1.2em;
   font-weight:100;
   color: #980000;
   border-bottom: 1px solid #ddd;
